--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
     "feather-icons": "^4.29.2",
     "vue": "^3.2.13",
